--- a/style/contentstyle.css
+++ b/style/contentstyle.css
@@ -18,11 +18,13 @@
 }
 
 .Content:hover {
+    /*border-radius: 100%;*/
+    box-shadow: 0 0 25px rgba(0,0,0,0.5);
     position: relative;
     margin-top: 50px;
     width: 300px;
     height: 300px;
-    border: dashed 4px #009999;
+    border: solid 2px #009999;
 
 }
 
@@ -46,6 +48,7 @@
 }
 
 #ContentBlock1:hover {
+    background-image: url("img/Rols2.jpg");
     cursor: pointer;
     background-size: cover;
 }
@@ -56,6 +59,7 @@
 }
 
 #ContentBlock2:hover {
+    background-image: url("img/Bike2.jpg");
     cursor: pointer;
     background-size: cover;
 }
@@ -66,6 +70,33 @@
 }
 
 #ContentBlock3:hover {
+    background-image: url("img/Project2.jpg");
     cursor: pointer;
     background-size: cover;
+}
+
+#contul {
+    text-align: center;
+    list-style-type: none;
+    width: 100%;
+    /*border: solid 2px black;*/
+    margin-top: 15%;
+}
+
+.contli {
+
+    width: 100%;
+}
+
+.contimgli {
+    width: 100%;
+}
+
+footer {
+    border-top: dashed 5px whitesmoke;
+    background-color: white;
+    width: 100%;
+    height: 200px;
+    color: #fff;
+    position: relative;
 }
